--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/webpack-config": "^0.17.0",
     "expo": "~46.0.21",
     "expo-status-bar": "~1.4.0",
+    "formik": "^2.4.5",
     "js-abbreviation-number": "^1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
