--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.9",
     "react-native-web": "~0.18.7",
-    "react-router-native": "^6.20.1"
+    "react-router-native": "^6.20.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
